Fix: URL encode MongoDB password

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # ═══════════════════════════════════════════════════════════
 # MONGODB CONFIGURATION (Active)
 # ═══════════════════════════════════════════════════════════
-MONGODB_URI=mongodb+srv://d34911651_db_user:jeda@123@cluster0.c8dw3ca.mongodb.net/isafari_global?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://d34911651_db_user:jeda%40123@cluster0.c8dw3ca.mongodb.net/isafari_global?retryWrites=true&w=majority&appName=Cluster0
 MONGODB_DB_NAME=isafari_global
 
 # ═══════════════════════════════════════════════════════════
